Implement address API logic. Related to #4

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.application.name=backend-dolciluxe-java
+spring.application.name=Dolciluxe
+spring.data.mongodb.uri=mongodb+srv://dolciluxe:R9dQnvJoVIPyGnd9@dolciluxe.emcruiv.mongodb.net/Dolciluxe?retryWrites=true&w=majority
+server.port=8080
