--- a/pom.xml
+++ b/pom.xml
@@ -51,8 +51,34 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+  			<groupId>org.springframework.boot</groupId>
+  			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		</dependency>
+		<dependency>
+  			<groupId>io.github.cdimascio</groupId>
+  			<artifactId>dotenv-java</artifactId>
+  			<version>3.0.0</version>
+		</dependency>
+		<dependency>
+      		<groupId>org.springframework.boot</groupId>
+      		<artifactId>spring-boot-starter-security</artifactId>
+    	</dependency>
+		<dependency>
+      		<groupId>org.springframework.boot</groupId>
+      		<artifactId>spring-boot-starter-data-jpa</artifactId>
+    	</dependency>
+		<dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-api</artifactId>
+      <version>0.11.5</version>
+    </dependency>
+		<!-- <dependency>
+      		<groupId>com.mysql</groupId>
+      		<artifactId>mysql-connector-j</artifactId>
+      		<scope>runtime</scope>
+    	</dependency> -->
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
