--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 spring.application.name=backend-dolciluxe-java
 # spring.profiles.active=dev
+spring.data.mongodb.uri=mongodb+srv://locphp:WA7FGVUTQ93NQsVY@cluster-ie213.pjfxp.mongodb.net/backendjava?retryWrites=true&w=majority
+
+spring.data.mongodb.database=backendjava
+spring.data.mongodb.auto-index-creation=true
+
+spring.security.user.name=user
+spring.security.user.password=password
+jwt.secret=nhoms6
+jwt.accessExpirationMs=3600000
+jwt.refreshExpirationMs=86400000
