update auth api and users api

--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,21 @@
       <artifactId>jjwt-api</artifactId>
       <version>0.11.5</version>
     </dependency>
+	<!-- JWT Implementation -->
+    <dependency>
+        <groupId>io.jsonwebtoken</groupId>
+        <artifactId>jjwt-impl</artifactId>
+        <version>0.11.5</version>
+        <scope>runtime</scope>
+    </dependency>
+
+    <!-- JWT Jackson support (for claim JSON parsing) -->
+    <dependency>
+        <groupId>io.jsonwebtoken</groupId>
+        <artifactId>jjwt-jackson</artifactId>
+        <version>0.11.5</version>
+        <scope>runtime</scope>
+    </dependency>
 		<!-- <dependency>
       		<groupId>com.mysql</groupId>
       		<artifactId>mysql-connector-j</artifactId>
