--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 spring.application.name=backend-dolciluxe-java
+# spring.application.name=Dolciluxe
 # spring.profiles.active=dev
 spring.data.mongodb.uri=mongodb+srv://locphp:WA7FGVUTQ93NQsVY@cluster-ie213.pjfxp.mongodb.net/backendjava?retryWrites=true&w=majority
-
+# spring.data.mongodb.uri=mongodb+srv://dolciluxe:R9dQnvJoVIPyGnd9@dolciluxe.emcruiv.mongodb.net/Dolciluxe?retryWrites=true&w=majority
 spring.data.mongodb.database=backendjava
 spring.data.mongodb.auto-index-creation=true
 
 spring.security.user.name=user
 spring.security.user.password=password
-jwt.secret=nhoms6
+jwt.secret=5a960358dc3a5e2aa801a8264dc28050
 jwt.accessExpirationMs=3600000
 jwt.refreshExpirationMs=86400000
